# Vertigo

./: .env.example  .gitignore  .replit  Anchor.toml  DEPENDENCIES.md  OPTIMIZATION.md  PERFORMANCE.md  README.md  SECURITY.md  SOLANA_SETUP.md  design_guidelines.md  drizzle.config.ts  package-lock.json  package.json  package.json.backup  replit.md  rust-toolchain.toml  tailwind.config.ts  vercel.json  vite.config.ts
client/: index.html
client/src/: App.tsx  index.css
programs/raffle/: Cargo.toml  Xargo.toml
programs/raffle/src/: lib.rs
server/: index.ts
shared/: types.ts
tests/: raffle.ts
